--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Agendamento Médico
+APP_NAME="Agendamento Médico"
 APP_ENV=local
 APP_KEY=base64:azQ8qTzxowc6L24cx5nSn2OWJ0wlTO/BrTAjSjDkFoI=
 APP_DEBUG=true
