--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       LOG_CHANNEL: stack
     depends_on:
       - db
+    networks:
+      - medical-scheduling-network
 
   db:
     image: mysql:8.0
@@ -27,6 +29,23 @@ services:
       - db_data:/var/lib/mysql
     ports:
       - "3310:3306"
+    networks:
+      - medical-scheduling-network
+
+  mockapi:
+    image: node:18-alpine
+    container_name: medical-scheduling-mockapi
+    working_dir: /app
+    volumes:
+      - ./resources/mocks:/app/mocks
+    command: sh -c "npm install -g json-server && json-server --watch /app/mocks/doctors.json --port 3000"
+    ports:
+      - "3000:3000"
+    networks:
+      - medical-scheduling-network
 
 volumes:
   db_data:
+networks:
+  medical-scheduling-network:
+    driver: bridge
