Traduções / Ajuste de Locais de Arquivos

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,9 @@ APP_NAME="Agendamento Médico"
 APP_ENV=local
 APP_KEY=base64:azQ8qTzxowc6L24cx5nSn2OWJ0wlTO/BrTAjSjDkFoI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+
+ASSET_URL=${APP_URL}/img
 
 APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=pt_BR
